really start the manuscript

--- a/endnote.bib
+++ b/endnote.bib
@@ -1347,3 +1347,366 @@ Publisher: American Psychological Association},
 	langid = {english},
 	keywords = {Attentional blink, Social judgments, Trustworthiness, Utility}
 }
+
+
+@article{dunbar_gossip_2004,
+	title = {Gossip in Evolutionary Perspective},
+	volume = {8},
+	issn = {1089-2680},
+	url = {https://doi.org/10.1037/1089-2680.8.2.100},
+	doi = {10.1037/1089-2680.8.2.100},
+	abstract = {Conversation is a uniquely human phenomenon. Analyses of freely forming conversations indicate that approximately two thirds of conversation time is devoted to social topics, most of which can be given the generic label gossip. This article first explores the origins of gossip as a mechanism for bonding social groups, tracing these origins back to social grooming among primates. It then asks why social gossip in this sense should form so important a component of human interaction and presents evidence to suggest that, aside from servicing social networks, a key function may be related explicitly to controlling free riders. Finally, the author reviews briefly the role of social cognition in facilitating conversations of this kind.},
+	pages = {100--110},
+	number = {2},
+	journaltitle = {Review of General Psychology},
+	shortjournal = {Review of General Psychology},
+	author = {Dunbar, R. I. M.},
+	urldate = {2021-03-22},
+	date = {2004-06-01},
+	langid = {english},
+	note = {Publisher: {SAGE} Publications Inc}
+}
+
+
+@incollection{ellemers_morality_2018,
+	location = {New York, {NY}, {US}},
+	title = {Morality and social identity},
+	isbn = {978-0-19-024757-7},
+	series = {Oxford library of psychology},
+	abstract = {Moral norms and values are key features of human essence, that provide the standards against which behavior is evaluated. Some moral norms and values are universally endorsed (e.g., “do no harm”), others can be more specific (e.g., “eat no meat”). Professional, cultural or religious groups and communities often define their own unique system of moral norms that true group members are expected to adhere to. These are used to identify ‘proper’ group members, regulate the behavior of individuals, and sanction those who transgress them. This is functional to the extent that such guidelines help provide groups and their members with a unique and distinct social identity. Yet they can also constitute a source of social tension and intergroup conflict. This hallmark feature of human morality represents an important challenge to contemporary societies. ({PsycINFO} Database Record (c) 2018 {APA}, all rights reserved)},
+	pages = {147--158},
+	booktitle = {The Oxford handbook of the human essence},
+	publisher = {Oxford University Press},
+	author = {Ellemers, Naomi},
+	editor = {van Zomeren, M. and Dovidio, J. F.},
+	date = {2018},
+	keywords = {Behavior, Conflict, Morality, Social Identity, Self-Concept, Intergroup Dynamics, Values, Social Groups, Group Differences, Human Nature, Social Issues, Social Norms}
+}
+
+
+@article{siegel_beliefs_2018,
+	title = {Beliefs about bad people are volatile},
+	volume = {2},
+	rights = {2018 The Author(s)},
+	issn = {2397-3374},
+	url = {https://www.nature.com/articles/s41562-018-0425-1},
+	doi = {10.1038/s41562-018-0425-1},
+	abstract = {People form moral impressions rapidly, effortlessly and from a remarkably young age1–5. Putatively ‘bad’ agents command more attention and are identified more quickly and accurately than benign or friendly agents5–12. Such vigilance is adaptive, but can also be costly in environments where people sometimes make mistakes, because incorrectly attributing bad character to good people damages existing relationships and discourages forming new relationships13–16. The ability to accurately infer the moral character of others is critical for healthy social functioning, but the computational processes that support this ability are not well understood. Here, we show that moral inference is explained by an asymmetric Bayesian updating mechanism in which beliefs about the morality of bad agents are more uncertain (and therefore more volatile) than beliefs about the morality of good agents. This asymmetry seems to be a property of learning about immoral agents in general, as we also find greater uncertainty for beliefs about the non-moral traits of bad agents. Our model and data reveal a cognitive mechanism that permits flexible updating of beliefs about potentially threatening others, a mechanism that could facilitate forgiveness when initial bad impressions turn out to be inaccurate. Our findings suggest that negative moral impressions destabilize beliefs about others, promoting cognitive flexibility in the service of cooperative but cautious behaviour.},
+	pages = {750--756},
+	number = {10},
+	journaltitle = {Nature Human Behaviour},
+	author = {Siegel, Jenifer Z. and Mathys, Christoph and Rutledge, Robb B. and Crockett, Molly J.},
+	urldate = {2020-10-27},
+	date = {2018-10},
+	langid = {english},
+	note = {Number: 10
+Publisher: Nature Publishing Group},
+	file = {siegel2018.pdf:/home/hcp4715/Zotero/storage/HVYZ22HQ/siegel2018.pdf:application/pdf}
+}
+
+
+@article{schupp_facilitated_2004,
+	title = {The facilitated processing of threatening faces: an {ERP} analysis},
+	volume = {4},
+	issn = {1528-3542},
+	doi = {10.1037/1528-3542.4.2.189},
+	shorttitle = {The facilitated processing of threatening faces},
+	abstract = {Threatening, friendly, and neutral faces were presented to test the hypothesis of the facilitated perceptual processing of threatening faces. Dense sensor event-related brain potentials were measured while subjects viewed facial stimuli. Subjects had no explicit task for emotional categorization of the faces. Assessing early perceptual stimulus processing, threatening faces elicited an early posterior negativity compared with nonthreatening neutral or friendly expressions. Moreover, at later stages of stimulus processing, facial threat also elicited augmented late positive potentials relative to the other facial expressions, indicating the more elaborate perceptual analysis of these stimuli. Taken together, these data demonstrate the facilitated perceptual processing of threatening faces. Results are discussed within the context of an evolved module of fear (A. Ohman \& S. Mineka, 2001).},
+	pages = {189--200},
+	number = {2},
+	journaltitle = {Emotion (Washington, D.C.)},
+	shortjournal = {Emotion},
+	author = {Schupp, Harald T. and Ohman, Arne and Junghöfer, Markus and Weike, Almut I. and Stockburger, Jessica and Hamm, Alfons O.},
+	date = {2004-06},
+	pmid = {15222855},
+	keywords = {Affect, Visual Perception, Female, Male, Humans, Adult, Temporal Lobe, Cues, Evoked Potentials, Facial Expression, Functional Laterality, Discrimination, Psychological, Occipital Lobe, Random Allocation}
+}
+
+
+@article{ohman_face_2001,
+	title = {The face in the crowd revisited: a threat advantage with schematic stimuli},
+	volume = {80},
+	issn = {0022-3514},
+	doi = {10.1037/0022-3514.80.3.381},
+	shorttitle = {The face in the crowd revisited},
+	abstract = {Schematic threatening, friendly, and neutral faces were used to test the hypothesis that humans preferentially orient their attention toward threat. Using a visual search paradigm, participants searched for discrepant faces in matrices of otherwise identical faces. Across 5 experiments, results consistently showed faster and more accurate detection of threatening than friendly targets. The threat advantage was obvious regardless of whether the conditions favored parallel or serial search (i.e., involved neutral or emotional distractors), and it was valid for inverted faces. Threatening angry faces were more quickly and accurately detected than were other negative faces (sad or "scheming"), which suggests that the threat advantage can be attributed to threat rather than to the negative valence or the uniqueness of the target display.},
+	pages = {381--396},
+	number = {3},
+	journaltitle = {Journal of Personality and Social Psychology},
+	shortjournal = {J Pers Soc Psychol},
+	author = {Ohman, A. and Lundqvist, D. and Esteves, F.},
+	date = {2001-03},
+	pmid = {11300573},
+	keywords = {Emotions, Happiness, Attention, Female, Male, Humans, Sweden, Anger, Adult, Middle Aged, Reaction Time, Social Perception, Facial Expression, Analysis of Variance, Group Structure}
+}
+
+
+@article{skowronski_negativity_1989,
+	title = {Negativity and extremity biases in impression formation: A review of explanations.},
+	volume = {105},
+	issn = {1939-1455, 0033-2909},
+	url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/0033-2909.105.1.131},
+	doi = {10.1037/0033-2909.105.1.131},
+	shorttitle = {Negativity and extremity biases in impression formation},
+	pages = {131--142},
+	number = {1},
+	journaltitle = {Psychological Bulletin},
+	shortjournal = {Psychological Bulletin},
+	author = {Skowronski, John J. and Carlston, Donal E.},
+	urldate = {2021-03-19},
+	date = {1989},
+	langid = {english}
+}
+
+
+@article{fiske_attention_1980,
+	title = {Attention and weight in person perception: The impact of negative and extreme behavior},
+	volume = {38},
+	issn = {0022-3514},
+	url = {insights.ovid.com},
+	shorttitle = {Attention and weight in person perception},
+	abstract = {Analyzed the social perception process to determine whether selectivity of available stimuli is based on the informativeness of person attributes, the properties of which are the evaluative extremity (distance from the scale midpoint) and the evaluative valence (positive or negative). In a prelimina},
+	pages = {889--906},
+	number = {6},
+	journaltitle = {Journal of Personality and Social Psychology},
+	author = {Fiske, Susan},
+	urldate = {2021-03-19},
+	date = {1980-06}
+}
+
+
+@article{baumeister_bad_2001,
+	title = {Bad is Stronger than Good},
+	volume = {5},
+	issn = {1089-2680},
+	url = {https://doi.org/10.1037/1089-2680.5.4.323},
+	doi = {10.1037/1089-2680.5.4.323},
+	abstract = {The greater power of bad events over good ones is found in everyday events, major life events (e.g., trauma), close relationship outcomes, social network patterns, interpersonal interactions, and learning processes. Bad emotions, bad parents, and bad feedback have more impact than good ones, and bad information is processed more thoroughly than good. The self is more motivated to avoid bad self-definitions than to pursue good ones. Bad impressions and bad stereotypes are quicker to form and more resistant to disconfirmation than good ones. Various explanations such as diagnosticity and salience help explain some findings, but the greater power of bad events is still found when such variables are controlled. Hardly any exceptions (indicating greater power of good) can be found. Taken together, these findings suggest that bad is stronger than good, as a general principle across a broad range of psychological phenomena.},
+	pages = {323--370},
+	number = {4},
+	journaltitle = {Review of General Psychology},
+	shortjournal = {Review of General Psychology},
+	author = {Baumeister, Roy F. and Bratslavsky, Ellen and Finkenauer, Catrin and Vohs, Kathleen D.},
+	urldate = {2021-01-31},
+	date = {2001-12-01},
+	langid = {english},
+	note = {Publisher: {SAGE} Publications Inc}
+}
+
+
+@article{vanneste_attention_2007,
+	title = {Attention bias toward noncooperative people. A dot probe classification study in cheating detection},
+	volume = {28},
+	issn = {1090-5138},
+	url = {https://www.sciencedirect.com/science/article/pii/S1090513807000220},
+	doi = {10.1016/j.evolhumbehav.2007.02.005},
+	abstract = {Evolution-inspired research assumes the existence of brain mechanisms that scan for information that might signal noncooperative behavior. In this study, we demonstrate an automatic attention bias for threatening social interactions involving untrustworthy partners. Using a dot probe classification task, we found that, compared to unknown cooperators, attention was oriented significantly more toward the faces of unknown players who decided not to cooperate during a Prisoner's Dilemma Game. The present results thus suggest that an automatic, preconscious focus of attention underlies our ability to identify noncooperative players in social exchange situations.},
+	pages = {272--276},
+	number = {4},
+	journaltitle = {Evolution and Human Behavior},
+	shortjournal = {Evolution and Human Behavior},
+	author = {Vanneste, Sven and Verplaetse, Jan and Van Hiel, Alain and Braeckman, Johan},
+	urldate = {2021-03-19},
+	date = {2007-07-01},
+	langid = {english},
+	keywords = {Attention bias, Cheating detection, Dot probe}
+}
+
+
+@article{cushman_role_2006,
+	title = {The Role of Conscious Reasoning and Intuition in Moral Judgment: Testing Three Principles of Harm},
+	volume = {17},
+	issn = {0956-7976},
+	url = {https://doi.org/10.1111/j.1467-9280.2006.01834.x},
+	doi = {10.1111/j.1467-9280.2006.01834.x},
+	shorttitle = {The Role of Conscious Reasoning and Intuition in Moral Judgment},
+	abstract = {Is moral judgment accomplished by intuition or conscious reasoning? An answer demands a detailed account of the moral principles in question. We investigated three principles that guide moral judgments: (a) Harm caused by action is worse than harm caused by omission, (b) harm intended as the means to a goal is worse than harm foreseen as the side effect of a goal, and (c) harm involving physical contact with the victim is worse than harm involving no physical contact. Asking whether these principles are invoked to explain moral judgments, we found that subjects generally appealed to the first and third principles in their justifications, but not to the second. This finding has significance for methods and theories of moral psychology: The moral principles used in judgment must be directly compared with those articulated in justification, and doing so shows that some moral principles are available to conscious reasoning whereas others are not.},
+	pages = {1082--1089},
+	number = {12},
+	journaltitle = {Psychological Science},
+	shortjournal = {Psychol Sci},
+	author = {Cushman, Fiery and Young, Liane and Hauser, Marc},
+	urldate = {2021-03-22},
+	date = {2006-12-01},
+	langid = {english},
+	note = {Publisher: {SAGE} Publications Inc}
+}
+
+
+@article{young_neural_2007,
+	title = {The neural basis of the interaction between theory of mind and moral judgment},
+	volume = {104},
+	rights = {© 2007 by The National Academy of Sciences of the {USA}},
+	issn = {0027-8424, 1091-6490},
+	url = {https://www.pnas.org/content/104/20/8235},
+	doi = {10.1073/pnas.0701408104},
+	abstract = {Is the basis of criminality an act that causes harm, or an act undertaken with the belief that one will cause harm? The present study takes a cognitive neuroscience approach to investigating how information about an agent's beliefs and an action's consequences contribute to moral judgment. We build on prior developmental evidence showing that these factors contribute differentially to the young child's moral judgments coupled with neurobiological evidence suggesting a role for the right temporoparietal junction ({RTPJ}) in belief attribution. Participants read vignettes in a 2 × 2 design: protagonists produced either a negative or neutral outcome based on the belief that they were causing the negative outcome (“negative” belief) or the neutral outcome (“neutral” belief). The {RTPJ} showed significant activation above baseline for all four conditions but was modulated by an interaction between belief and outcome. Specifically, the {RTPJ} response was highest for cases of attempted harm, where protagonists were condemned for actions that they believed would cause harm to others, even though the harm did not occur. The results not only suggest a general role for belief attribution during moral judgment, but also add detail to our understanding of the interaction between these processes at both the neural and behavioral levels.},
+	pages = {8235--8240},
+	number = {20},
+	journaltitle = {Proceedings of the National Academy of Sciences},
+	shortjournal = {{PNAS}},
+	author = {Young, Liane and Cushman, Fiery and Hauser, Marc and Saxe, Rebecca},
+	urldate = {2021-03-22},
+	date = {2007-05-15},
+	langid = {english},
+	pmid = {17485679},
+	note = {Publisher: National Academy of Sciences
+Section: Social Sciences},
+	keywords = {functional {MRI}, medial prefrontal cortex, morality, right temporoparietal junction, theory of mind}
+}
+
+
+@article{haidt_new_2007,
+	title = {The New Synthesis in Moral Psychology},
+	volume = {316},
+	rights = {American Association for the Advancement of Science},
+	issn = {0036-8075, 1095-9203},
+	url = {https://science.sciencemag.org/content/316/5827/998},
+	doi = {10.1126/science.1137651},
+	abstract = {People are selfish, yet morally motivated. Morality is universal, yet culturally variable. Such apparent contradictions are dissolving as research from many disciplines converges on a few shared principles, including the importance of moral intuitions, the socially functional (rather than truth-seeking) nature of moral thinking, and the coevolution of moral minds with cultural practices and institutions that create diverse moral communities. I propose a fourth principle to guide future research: Morality is about more than harm and fairness. More research is needed on the collective and religious parts of the moral domain, such as loyalty, authority, and spiritual purity.},
+	pages = {998--1002},
+	number = {5827},
+	journaltitle = {Science},
+	author = {Haidt, Jonathan},
+	urldate = {2021-03-22},
+	date = {2007-05-18},
+	langid = {english},
+	pmid = {17510357},
+	note = {Publisher: American Association for the Advancement of Science
+Section: Review},
+	file = {Snapshot:/home/hcp4715/Zotero/storage/6HVFCYII/998.html:text/html;Full Text PDF:/home/hcp4715/Zotero/storage/WWKQKIL5/Haidt - 2007 - The New Synthesis in Moral Psychology.pdf:application/pdf}
+}
+
+
+@article{rai_moral_2011,
+	title = {Moral psychology is relationship regulation: Moral motives for unity, hierarchy, equality, and proportionality},
+	volume = {118},
+	issn = {1939-1471(Electronic),0033-295X(Print)},
+	doi = {10.1037/a0021867},
+	shorttitle = {Moral psychology is relationship regulation},
+	abstract = {Genuine moral disagreement exists and is widespread. To understand such disagreement, we must examine the basic kinds of social relationships people construct across cultures and the distinct moral obligations and prohibitions these relationships entail. We extend relational models theory (Fiske, 1991) to identify 4 fundamental and distinct moral motives. Unity is the motive to care for and support the integrity of in-groups by avoiding or eliminating threats of contamination and providing aid and protection based on need or empathic compassion. Hierarchy is the motive to respect rank in social groups where superiors are entitled to deference and respect but must also lead, guide, direct, and protect subordinates. Equality is the motive for balanced, in-kind reciprocity, equal treatment, equal say, and equal opportunity. Proportionality is the motive for rewards and punishments to be proportionate to merit, benefits to be calibrated to contributions, and judgments to be based on a utilitarian calculus of costs and benefits. The 4 moral motives are universal, but cultures, ideologies, and individuals differ in where they activate these motives and how they implement them. Unlike existing theories (Haidt, 2007; Hauser, 2006; Turiel, 1983), relationship regulation theory predicts that any action, including violence, unequal treatment, and “impure” acts, may be perceived as morally correct depending on the moral motive employed and how the relevant social relationship is construed. This approach facilitates clearer understanding of moral perspectives we disagree with and provides a template for how to influence moral motives and practices in the world. ({PsycInfo} Database Record (c) 2020 {APA}, all rights reserved)},
+	pages = {57--75},
+	number = {1},
+	journaltitle = {Psychological Review},
+	author = {Rai, Tage Shakti and Fiske, Alan Page},
+	date = {2011},
+	note = {Place: {US}
+Publisher: American Psychological Association},
+	keywords = {Culture (Anthropological), Morality, Social Behavior, Social Equality, Social Interaction, Social Justice, Violence}
+}
+
+
+@article{bliss-moreau_individual_2008,
+	title = {Individual differences in learning the affective value of others under minimal conditions},
+	volume = {8},
+	issn = {1528-3542},
+	doi = {10.1037/1528-3542.8.4.479},
+	abstract = {This paper provides the first demonstration that people can learn about the positive and negative value of other people (e.g., neutral faces) under minimal learning conditions, with stable individual differences in this learning. In four studies, participants viewed neutral faces paired with sentences describing positive, negative or neutral behaviors on either two (Study 1) or four (Studies 2, 3, and 4) occasions. Participants were later asked to judge the valence of the faces alone. Studies 1 and 2 demonstrated that learning does occur under minimal conditions. Study 3 and 4 further demonstrated that the degree of learning was moderated by Extraversion. Finally, Study 4 demonstrated that initial learning persisted over a period of 2 days. Implications for affective processing and person perception are discussed.},
+	pages = {479--493},
+	number = {4},
+	journaltitle = {Emotion},
+	shortjournal = {Emotion},
+	author = {Bliss-Moreau, Eliza and Barrett, Lisa Feldman and Wright, Christopher I.},
+	date = {2008-08},
+	pmid = {18729580},
+	pmcid = {PMC2761963},
+	keywords = {Learning, Affect, Female, Male, Humans, Adult, Social Perception, Facial Expression, Environment, Extraversion, Psychological},
+	file = {Accepted Version:/home/hcp4715/Zotero/storage/QYPHEBJK/Bliss-Moreau et al. - 2008 - Individual differences in learning the affective v.pdf:application/pdf}
+}
+
+
+@article{falvello_robustness_2015,
+	title = {The Robustness of Learning about the Trustworthiness of Other People},
+	volume = {33},
+	issn = {0278-016X},
+	url = {https://guilfordjournals.com/doi/10.1521/soco.2015.33.5.368},
+	doi = {10.1521/soco.2015.33.5.368},
+	abstract = {A single behavioral statement about a person is sufficient to form trustworthiness associations with the person's face. In three experiments, we tested the limits of these associative processes. Participants were presented with 100 to 500 face-behavior pairs (intermixed with place images so that all participants saw 500 images and descriptions) and then judged a subset of the faces. Participants rated faces paired with positive behaviors as more trustworthy than faces paired with negative behaviors. This effect was as strong after 100 as after 400 face-behavior pairs (Experiment 1). In subsequent experiments, we tested whether similar associative effects could be obtained for places (Experiment 2) and competence-related behaviors (Experiment 3). Although we expected that the associative effects would be stronger for faces than places and for morality- than competence-related behaviors, we obtained similar effects. The findings suggest that trustworthiness associations are based on global affect-based inferences.},
+	pages = {368--386},
+	number = {5},
+	journaltitle = {Social Cognition},
+	author = {Falvello, Virginia and Vinson, Michael and Ferrari, Chiara and Todorov, Alexander},
+	urldate = {2021-03-12},
+	date = {2015-10-01},
+	note = {Publisher: Guilford Publications Inc.},
+	file = {Submitted Version:/home/hcp4715/Zotero/storage/U2MM38ZZ/Falvello et al. - 2015 - The Robustness of Learning about the Trustworthine.pdf:application/pdf}
+}
+
+
+@article{todorov_robust_2008,
+	title = {Robust learning of affective trait associations with faces when the hippocampus is damaged, but not when the amygdala and temporal pole are damaged},
+	volume = {3},
+	issn = {1749-5016},
+	url = {https://academic.oup.com/scan/article/3/3/195/1729173},
+	doi = {10.1093/scan/nsn013},
+	abstract = {Abstract. People can form evaluative associations with faces after obtaining a small amount of behavioral information. We studied whether patients with medial t},
+	pages = {195--203},
+	number = {3},
+	journaltitle = {Social Cognitive and Affective Neuroscience},
+	shortjournal = {Soc Cogn Affect Neurosci},
+	author = {Todorov, Alexander and Olson, Ingrid R.},
+	urldate = {2021-03-11},
+	date = {2008-09-01},
+	langid = {english},
+	note = {Publisher: Oxford Academic},
+	file = {Snapshot:/home/hcp4715/Zotero/storage/2AEQI9SP/1729173.html:text/html;Full Text PDF:/home/hcp4715/Zotero/storage/5RTEKL5Q/Todorov and Olson - 2008 - Robust learning of affective trait associations wi.pdf:application/pdf}
+}
+
+
+@article{anderson_value-driven_2011,
+	title = {Value-driven attentional capture},
+	volume = {108},
+	issn = {0027-8424, 1091-6490},
+	url = {https://www.pnas.org/content/108/25/10367},
+	doi = {10.1073/pnas.1104047108},
+	abstract = {Attention selects which aspects of sensory input are brought to awareness. To promote survival and well-being, attention prioritizes stimuli both voluntarily, according to context-specific goals (e.g., searching for car keys), and involuntarily, through attentional capture driven by physical salience (e.g., looking toward a sudden noise). Valuable stimuli strongly modulate voluntary attention allocation, but there is little evidence that high-value but contextually irrelevant stimuli capture attention as a consequence of reward learning. Here we show that visual search for a salient target is slowed by the presence of an inconspicuous, task-irrelevant item that was previously associated with monetary reward during a brief training session. Thus, arbitrary and otherwise neutral stimuli imbued with value via associative learning capture attention powerfully and persistently during extinction, independently of goals and salience. Vulnerability to such value-driven attentional capture covaries across individuals with working memory capacity and trait impulsivity. This unique form of attentional capture may provide a useful model for investigating failures of cognitive control in clinical syndromes in which value assigned to stimuli conflicts with behavioral goals (e.g., addiction, obesity).},
+	pages = {10367--10371},
+	number = {25},
+	journaltitle = {Proceedings of the National Academy of Sciences},
+	shortjournal = {{PNAS}},
+	author = {Anderson, Brian A. and Laurent, Patryk A. and Yantis, Steven},
+	urldate = {2021-03-22},
+	date = {2011-06-21},
+	langid = {english},
+	pmid = {21646524},
+	note = {Publisher: National Academy of Sciences
+Section: Biological Sciences},
+	file = {Full Text PDF:/home/hcp4715/Zotero/storage/KGHHUEA2/Anderson et al. - 2011 - Value-driven attentional capture.pdf:application/pdf;Snapshot:/home/hcp4715/Zotero/storage/HGZN6KXQ/10367.html:text/html}
+}
+
+
+@article{anderson_neurobiology_2019,
+	title = {Neurobiology of value-driven attention},
+	volume = {29},
+	issn = {2352-250X},
+	url = {https://www.sciencedirect.com/science/article/pii/S2352250X1830174X},
+	doi = {10.1016/j.copsyc.2018.11.004},
+	series = {Attention \& Perception},
+	abstract = {What we pay attention to is influenced by reward learning. Converging evidence points to the idea that associative reward learning changes how visual stimuli are processed in the brain, rendering learned reward cues difficult to ignore. Behavioral evidence distinguishes value-driven attention from other established control mechanisms, suggesting a distinct underlying neurobiological process. Recently, studies have begun to explore the neural substrates of this value-driven attention mechanism. Here, I review the progress that has been made in this area, and synthesize the findings to provide an integrative account of the neurobiology of value-driven attention. The proposed account can explain both attentional capture by previously rewarded targets and the modulatory effect of reward on priming, as well as the decoupling of reward history and prior task relevance in value-driven attention.},
+	pages = {27--33},
+	journaltitle = {Current Opinion in Psychology},
+	shortjournal = {Current Opinion in Psychology},
+	author = {Anderson, Brian A},
+	urldate = {2021-03-22},
+	date = {2019-10-01},
+	langid = {english},
+	file = {ScienceDirect Snapshot:/home/hcp4715/Zotero/storage/38JMWLHF/S2352250X1830174X.html:text/html}
+}
+
+
+@article{abele_agency_2007,
+	title = {Agency and communion from the perspective of self versus others},
+	volume = {93},
+	issn = {1939-1315(Electronic),0022-3514(Print)},
+	doi = {10.1037/0022-3514.93.5.751},
+	abstract = {On the basis of previous research, the authors hypothesize that (a) person descriptive terms can be organized into the broad dimensions of agency and communion of which communion is the primary one; (b) the main distinction between these dimensions pertains to their profitability for the self (agency) vs. for other persons (communion); hence, agency is more desirable and important in the self-perspective, and communion is more desirable and important in the other-perspective; (c) self-other outcome dependency increases importance of another person's agency. Study 1 showed that a large number of trait names can be reduced to these broad dimensions, that communion comprises more item variance, and that agency is predicted by self-profitability and communion by other-profitability. Studies 2 and 3 showed that agency is more relevant and desired for self, and communion is more relevant and desired for others. Study 4 showed that agency is more important in a close friend than an unrelated peer, and this difference is completely mediated by the perceived outcome dependency. ({PsycINFO} Database Record (c) 2016 {APA}, all rights reserved)},
+	pages = {751--763},
+	number = {5},
+	journaltitle = {Journal of Personality and Social Psychology},
+	author = {Abele, Andrea E. and Wojciszke, Bogdan},
+	date = {2007},
+	note = {Place: {US}
+Publisher: American Psychological Association},
+	keywords = {Agency, Attribution, Independence (Personality), Judgment, Self-Perception, Social Behavior, Social Cognition, Social Perception},
+	file = {Snapshot:/home/hcp4715/Zotero/storage/TRDW3KKA/2007-15390-004.html:text/html;Full Text:/home/hcp4715/Zotero/storage/WY755C95/Abele and Wojciszke - 2007 - Agency and communion from the perspective of self .pdf:application/pdf}
+}
